--- a/2019/CMakeLists.txt
+++ b/2019/CMakeLists.txt
@@ -3,5 +3,6 @@ project (aoc-2019)
 
 add_executable(rocket-equation 01/rocket-equation.cpp)
 add_executable(program-alert 02/program-alert.cpp)
+add_executable(crossed-wires 03/crossed-wires.cpp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-sign-compare")
