--- a/2019/CMakeLists.txt
+++ b/2019/CMakeLists.txt
@@ -5,4 +5,5 @@ add_executable(rocket-equation 01/rocket-equation.cpp)
 add_executable(program-alert 02/program-alert.cpp)
 add_executable(crossed-wires 03/crossed-wires.cpp)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-sign-compare")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g -Wall -Wno-sign-compare")
+
