2019/04: finish parts one and two

--- a/2019/CMakeLists.txt
+++ b/2019/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required (VERSION 3.13.4)
 project (aoc-2019)
 
+set(CMAKE_CXX_STANDARD 20)
+
 add_executable(rocket-equation 01/rocket-equation.cpp)
 add_executable(program-alert 02/program-alert.cpp)
 add_executable(crossed-wires 03/crossed-wires.cpp)
+add_executable(secure-container 04/secure-container.cpp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g -Wall -Wno-sign-compare")
 
